# SDL3Test

./: .gitignore  CMakeLists.txt
src/project/: main.cpp
src/project/test/: CMakeLists.txt  test.cpp  test.h
